@@ -1,6 +1,7 @@
 vX.Y.Z (YYYY-MM-DD)
 
 - AppImage checks for existing LD_LIBRARY_PATH before updating
+- Add missing libraries for gnuplot to AppImage
 
 v0.53.0 (2023-05-17)
 
